--- a/_layouts/pico8.html
+++ b/_layouts/pico8.html
@@ -10,7 +10,7 @@ layout: default_pico8
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Written on {{ page.date | date: "%B %e, %Y" }}, Last update on {{ site.data.mtime[ page.path] | date: "%B %e, %Y" }}
   </div>
 
 
