--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% assign last_modified_at = site.data.mtime[ page.path] %}
 
 <article class="post">
   <h1>{{ page.title }}</h1>
@@ -10,7 +11,7 @@ layout: default
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Written on {{ page.date | date: "%B %e, %Y" }}, Last update on {{ last_modified_at | date: "%B %e, %Y" }}
   </div>
 
 
